log
Wed 08 May 2024 06:46:05 PM UTC: 
 tests:  1|8
total_score: 0/70
f270663
Wed 08 May 2024 06:58:01 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
221e6e7
Wed 08 May 2024 07:06:14 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  0|0
467444e
Wed 08 May 2024 07:13:21 PM UTC: 
 treemap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
be95683
Wed 08 May 2024 07:14:56 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
2a16323
Wed 08 May 2024 07:17:54 PM UTC: 
 treemap.c | 15 ++++-----------
 1 file changed, 4 insertions(+), 11 deletions(-)
 tests:  4|7
total_score: 5/70
913e7a9
Wed 08 May 2024 07:22:47 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
c3c461b
Wed 08 May 2024 07:25:30 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:19: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   82 |         } else if(lower_than(key, aux->pair->key) == 1){
      |                   ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
234aa98
Wed 08 May 2024 07:25:49 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
aae7a54
Thu 09 May 2024 06:48:08 AM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  10|6
total_score: 15/70
6f70fe9
Thu 09 May 2024 06:50:27 AM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  12|6
total_score: 15/70
6bdd821
Thu 09 May 2024 06:51:13 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
a578e2e
Thu 09 May 2024 06:53:25 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
50e82a6
Thu 09 May 2024 06:53:52 AM UTC: 
 treemap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  13|5
total_score: 25/70
ed2d3e7
Thu 09 May 2024 06:54:12 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
539ac0c
Thu 09 May 2024 07:02:48 AM UTC: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|0
0917ea6
Thu 09 May 2024 07:07:06 AM UTC: 
 treemap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  0|0
1f8337b
Thu 09 May 2024 07:08:39 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
7284fa6
